--- a/baralek/assets/css/style.css
+++ b/baralek/assets/css/style.css
@@ -625,9 +625,10 @@ section {
 # Values
 --------------------------------------------------------------*/
 .values .box {
+  background-color: #fff;
   padding: 30px;
   border-radius: 30px;
-  box-shadow: 0px 0 5px rgba(68, 185, 143, 0.45);
+  box-shadow: 0px 0 5px rgba(17, 33, 100, 0.45);
   text-align: center;
   transition: 0.3s;
   height: 100%;
@@ -647,7 +648,7 @@ section {
 }
 
 .values .box:hover {
-  box-shadow: 0px 0 30px rgba(68, 185, 143, 0.45);
+  box-shadow: 0px 0 30px rgba(17, 33, 100, 0.45);
 }
 
 .values .box:hover img {
