--- a/baralek/assets/css/style.css
+++ b/baralek/assets/css/style.css
@@ -2649,6 +2649,29 @@ section {
  Materi Section
  ----------------------------------------------------------------------*/
 
+ #materi {
+  background-image: url(../img/materi/materi-bg.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  height: 100rem;
+  margin-bottom: 0;
+}
+#materi .txt {
+  width: 65%;
+  margin: auto auto 2rem auto;
+  border-radius: 20px;
+  padding: 1rem 1rem 1rem 1rem;
+  background: #ffffff;
+  box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.3);
+}
+
+.submateri {
+  color: #2444CC;
+  width: 65%;
+  margin: auto auto auto auto;
+  padding: 2rem 2rem 1rem 2rem;
+}
+
 #fourthSec .nav-fill .nav-link.active {
   background: #112164;
   border-color: #112164;
@@ -2711,10 +2734,6 @@ section {
   border-bottom: 10px solid #FFC4DD;
 }
 
-.tombol-materi{
-  padding: 0 2rem 2rem 2rem;
-}
-
 .tombol {
   display: inline-block;
   font-weight: 400;
@@ -2749,7 +2768,7 @@ section {
 
  
  #sdi {
-  background-image: url(../img/materi/materi-bg.png);
+  background-image: url(../img/SDI/sdi-bg.png);
   background-repeat: no-repeat;
   background-size: 100% 75rem;
   height: 78rem;
